Adicionado rota pra remover valor de uma meta
